--- a/config/answer.yaml
+++ b/config/answer.yaml
@@ -1,25 +1,31 @@
-BacePrompt:
-  answer: もちろんです。どの内容について詳しく説明してほしいか教えていただけますか？具体的なトピックや質問をお知らせいただければ、それに基づいて詳しく説明いたします。
-  generated_at: '2025-10-18T18:57:01.929766'
-  prompt_preview: 以下の内容について詳しく説明してください。
 CustomerSummarizePrompt:
-  answer: 'もちろんです。顧客情報を基にした営業担当者向けの要約を作成するためには、具体的な顧客情報が必要です。以下の情報を提供していただければ、より具体的な要約を作成できます。
+  answer: "### 顧客情報要約\n\n#### 1. 顧客の基本情報\n- **C001 田中太郎**\n  - 年齢: 35歳\n  - 性別: 男性\n\
+    \  - 職業: エンジニア\n  - 年収: 600万円\n  - 満足度: 4.5\n  - コメント: 製品の品質に満足している\n\n- **C002\
+    \ 佐藤花子**\n  - 年齢: 28歳\n  - 性別: 女性\n  - 職業: デザイナー\n  - 年収: 450万円\n  - 満足度: 4.0\n\
+    \  - コメント: デザインが気に入っている\n\n- **C003 鈴木次郎**\n  - 年齢: 42歳\n  - 性別: 男性\n  - 職業: 営業\n\
+    \  - 年収: 520万円\n  - 満足度: 3.5\n  - コメント: 価格がやや高い\n\n- **C004 高橋美咲**\n  - 年齢: 31歳\n\
+    \  - 性別: 女性\n  - 職業: マーケター\n  - 年収: 550万円\n  - 満足度: 4.2\n  - コメント: サポートが丁寧で安心\n\
+    \n- **C005 山田健一**\n  - 年齢: 38歳\n  - 性別: 男性\n  - 職業: マネージャー\n  - 年収: 750万円\n  -\
+    \ 満足度: 4.8\n  - コメント: 全体的に満足度が高い\n\n#### 2. 購買傾向\n- **製品カテゴリ**: パソコン、スマートフォン、タブレット、周辺機器（キーボード、マウス、ヘッドホン、プリンターなど）\n\
+    - **人気製品**: パソコンとスマートフォンが特に人気で、複数の顧客が購入している。\n- **価格感度**: 鈴木次郎は価格に敏感であり、他の顧客は製品の品質やデザインに重きを置いている。\n\
+    \n#### 3. 重要なポイント\n- **高い満足度**: 山田健一は特に高い満足度（4.8）を示しており、他の顧客も概ね満足している。\n- **サポートの評価**:\
+    \ 高橋美咲はサポートの丁寧さを評価しており、顧客サービスの重要性が示唆される。\n- **価格に対する意見**: 鈴木次郎のコメントから、価格設定の見直しが必要かもしれない。\n\
+    \n#### 4. 営業戦略の提案\n- **ターゲットセグメンテーション**: 年齢や職業に基づいて、特定の製品を提案する。例えば、エンジニアやデザイナーには高性能なパソコンやデザイン性の高い製品を推奨。\n\
+    - **満足度向上施策**: サポート体制を強化し、顧客からのフィードバックを活用して製品やサービスの改善を図る。\n- **価格戦略の見直し**: 鈴木次郎の意見を考慮し、価格帯の見直しやプロモーションを検討することで、価格に敏感な顧客層を取り込む。\n\
+    - **リピート購入促進**: 満足度の高い顧客に対して、特別なオファーや割引を提供し、リピート購入を促進する。"
+  customer_data_length: 407
+  customer_data_preview: '顧客ID   氏名  年齢 性別     職業    年収                購入履歴  満足度         コメント
+
+    C001 田中太郎  35 男性  エンジニア 600万円  パソコン・スマートフォン・ヘッドホン  4.5 製品の品質に満足している
+
+    C002 佐藤花子  28 女性  デザイナー 450万円     タブレット・キーボード・マウス  4.0 デザインが気に入っ...'
+  final_prompt_length: 532
+  generated_at: '2025-10-18T21:26:21.615400'
+  prompt_preview: '顧客情報を基に、営業担当者向けの要約を作成してください。
 
 
-    1. 顧客の名前または会社名
-
-    2. 業種や業界
-
-    3. 顧客のニーズや課題
-
-    4. 過去の取引履歴
-
-    5. 競合他社との関係
-
-    6. その他の重要な情報（例：予算、決定権者、タイムラインなど）
+    以下の顧客データを分析し、営業活動に役立つポイントを整理してください：
 
 
-    これらの情報を教えていただければ、営業担当者向けの要約を作成いたします。'
-  generated_at: '2025-10-18T18:57:09.894816'
-  prompt_preview: 顧客情報を基に、営業担当者向けの要約を作成してください。
+    顧客ID   氏名  年齢 性別     職業    年収    ...'
   task_type: 顧客要約
