--- a/config/evaluation.yaml
+++ b/config/evaluation.yaml
@@ -1,24 +1,16 @@
-BacePrompt:
-  eval_prompt_preview: '以下の回答を評価してください。
-
-
-    回答: もちろんです。どの内容について詳しく説明してほしいか教えていただけますか？具体的なトピックや質問をお知らせいただければ、それに基づいて詳しく説明いたします。
-
-    ...'
-  evaluated_at: '2025-10-18T18:57:04.128177'
-  evaluation:
-    一貫性: 8
-    簡潔さ: 9
-    評価理由: 要点が明確で、相手に具体的な質問を促す形で整理されている。ただし、もう少し具体的な例を挙げるとさらに良い。
 CustomerSummarizePrompt:
-  eval_prompt_preview: '以下の顧客要約を評価してください。
-
-
-    要約: もちろんです。顧客情報を基にした営業担当者向けの要約を作成するためには、具体的な顧客情報が必要です。以下の情報を提供していただければ、より具体的な要約を作...'
-  evaluated_at: '2025-10-18T18:57:11.151888'
+  class_eval_items:
+  - '要約の正確性 (1-10点): 顧客データの内容を正確に要約できているか'
+  - '営業有用性 (1-10点): 営業担当者にとって実用的な情報が含まれているか'
+  common_eval_items:
+  - '簡潔さ (1-10点): 回答が簡潔で要点がまとまっているか'
+  - '一貫性 (1-10点): 内容に矛盾がなく一貫しているか'
+  eval_prompt_preview: "以下の回答を評価してください。\n\n回答: ### 顧客情報要約\n\n#### 1. 顧客の基本情報\n- **C001\
+    \ 田中太郎**\n  - 年齢: 35歳\n  - 性別: 男性\n  - 職業: エンジニ..."
+  evaluated_at: '2025-10-18T21:26:23.986365'
   evaluation:
-    一貫性: 8
-    簡潔さ: 7
+    一貫性: 9
+    営業有用性: 9
+    簡潔さ: 8
     要約の正確性: 9
-    評価理由: 必要な情報を明確に示しており、一貫した論理で構成されているが、もう少し簡潔にまとめることができる。
-  task_type: 顧客要約
+    評価理由: 簡潔さについては、情報が整理されており、要点が明確に示されているが、もう少し短くまとめることができる部分もある。一貫性は高く、全体を通して矛盾がなく、論理的に構成されている。要約の正確性も高く、顧客データが正確に反映されている。営業有用性については、具体的な戦略提案が含まれており、実用的な情報が豊富であるため、非常に高い評価を与えた。
