--- a/config/prompt.yaml
+++ b/config/prompt.yaml
@@ -1,28 +1,48 @@
-BacePrompt:
-  prompt: "以下の内容について詳しく説明してください。"
-  eval_prompt: |
+# 全クラス共通の評価設定
+Common:
+  # 共通評価項目
+  eval_items:
+    - "簡潔さ (1-10点): 回答が簡潔で要点がまとまっているか"
+    - "一貫性 (1-10点): 内容に矛盾がなく一貫しているか"
+  
+  # 評価プロンプトテンプレート
+  eval_prompt_template: |
     以下の回答を評価してください。
     
     回答: {answer}
     
-    以下の観点で1-10のスコアをつけてください（JSON形式で回答）:
-    - 簡潔さ: 簡潔で要点が整理されているか
-    - 一貫性: 論理的で一貫性があるか
+    以下の評価項目でそれぞれ1-10のスコアをつけてください:
+    {eval_items}
     
-    例:
-    {{"簡潔さ": 8, "一貫性": 7, "評価理由": "簡潔で分かりやすいが、一部論理的な飛躍がある"}}
+    必ず以下のJSON形式で回答してください:
+    
+    {{
+      "簡潔さ": [1-10の数値],
+      "一貫性": [1-10の数値],
+      "要約の正確性": [1-10の数値],
+      "営業有用性": [1-10の数値],
+      "評価理由": "[各項目の具体的な評価理由]"
+    }}
+    
+    注意: JSON形式以外の文字は含めないでください。
 
+# 顧客要約プロンプトクラス
 CustomerSummarizePrompt:
-  prompt: "顧客情報を基に、営業担当者向けの要約を作成してください。"
-  eval_prompt: |
-    以下の顧客要約を評価してください。
+  # 生成プロンプト
+  prompt: |
+    顧客情報を基に、営業担当者向けの要約を作成してください。
     
-    要約: {answer}
+    以下の顧客データを分析し、営業活動に役立つポイントを整理してください：
     
-    以下の観点で1-10のスコアをつけてください（JSON形式で回答）:
-    - 簡潔さ: 簡潔で要点が整理されているか
-    - 一貫性: 論理的で一貫性があるか
-    - 要約の正確性: 重要な情報が正確に要約されているか
+    {customer_data}
     
-    例:
-    {{"簡潔さ": 8, "一貫性": 7, "要約の正確性": 9, "評価理由": "重要な情報は正確だが、もう少し簡潔にできる"}}
+    要約には以下の項目を含めてください：
+    - 顧客の基本情報
+    - 購買傾向
+    - 重要なポイント
+    - 営業戦略の提案
+  
+  # クラス固有の評価項目
+  eval_items:
+    - "要約の正確性 (1-10点): 顧客データの内容を正確に要約できているか"
+    - "営業有用性 (1-10点): 営業担当者にとって実用的な情報が含まれているか"
