--- a/config/answer.yaml
+++ b/config/answer.yaml
@@ -7,25 +7,12 @@ CustomerSummarizePrompt:
     \  - 性別: 女性\n  - 職業: マーケター\n  - 年収: 550万円\n  - 満足度: 4.2\n  - コメント: サポートが丁寧で安心\n\
     \n- **C005 山田健一**\n  - 年齢: 38歳\n  - 性別: 男性\n  - 職業: マネージャー\n  - 年収: 750万円\n  -\
     \ 満足度: 4.8\n  - コメント: 全体的に満足度が高い\n\n#### 2. 購買傾向\n- **製品カテゴリ**: パソコン、スマートフォン、タブレット、周辺機器（キーボード、マウス、ヘッドホン、プリンターなど）\n\
-    - **人気製品**: パソコンとスマートフォンが特に人気で、複数の顧客が購入している。\n- **価格感度**: 鈴木次郎は価格に敏感であり、他の顧客は製品の品質やデザインに重きを置いている。\n\
-    \n#### 3. 重要なポイント\n- **高い満足度**: 山田健一は特に高い満足度（4.8）を示しており、他の顧客も概ね満足している。\n- **サポートの評価**:\
-    \ 高橋美咲はサポートの丁寧さを評価しており、顧客サービスの重要性が示唆される。\n- **価格に対する意見**: 鈴木次郎のコメントから、価格設定の見直しが必要かもしれない。\n\
-    \n#### 4. 営業戦略の提案\n- **ターゲットセグメンテーション**: 年齢や職業に基づいて、特定の製品を提案する。例えば、エンジニアやデザイナーには高性能なパソコンやデザイン性の高い製品を推奨。\n\
-    - **満足度向上施策**: サポート体制を強化し、顧客からのフィードバックを活用して製品やサービスの改善を図る。\n- **価格戦略の見直し**: 鈴木次郎の意見を考慮し、価格帯の見直しやプロモーションを検討することで、価格に敏感な顧客層を取り込む。\n\
-    - **リピート購入促進**: 満足度の高い顧客に対して、特別なオファーや割引を提供し、リピート購入を促進する。"
-  customer_data_length: 407
-  customer_data_preview: '顧客ID   氏名  年齢 性別     職業    年収                購入履歴  満足度         コメント
-
-    C001 田中太郎  35 男性  エンジニア 600万円  パソコン・スマートフォン・ヘッドホン  4.5 製品の品質に満足している
-
-    C002 佐藤花子  28 女性  デザイナー 450万円     タブレット・キーボード・マウス  4.0 デザインが気に入っ...'
-  final_prompt_length: 532
-  generated_at: '2025-10-18T21:26:21.615400'
-  prompt_preview: '顧客情報を基に、営業担当者向けの要約を作成してください。
-
-
-    以下の顧客データを分析し、営業活動に役立つポイントを整理してください：
-
-
-    顧客ID   氏名  年齢 性別     職業    年収    ...'
+    - **人気製品**: パソコンとスマートフォンが特に多く購入されている。\n- **満足度**: 満足度は全体的に高いが、鈴木次郎のように価格に対する不満を持つ顧客もいる。\n\
+    \n#### 3. 重要なポイント\n- **高い満足度**: 特に山田健一（4.8）や田中太郎（4.5）は製品の品質に満足しており、リピート購入の可能性が高い。\n\
+    - **デザイン重視**: 佐藤花子はデザインに満足しており、デザイン性を重視する顧客層へのアプローチが有効。\n- **価格への懸念**: 鈴木次郎のコメントから、価格に敏感な顧客がいることがわかるため、価格戦略の見直しが必要。\n\
+    \n#### 4. 営業戦略の提案\n- **リピート購入促進**: 満足度の高い顧客に対して、特別割引や新製品の先行案内を行い、リピート購入を促進する。\n\
+    - **デザイン重視のプロモーション**: 佐藤花子のようなデザイナー向けに、デザイン性を強調したマーケティングキャンペーンを展開する。\n- **価格戦略の見直し**:\
+    \ 鈴木次郎の意見を考慮し、価格に対するアプローチを見直し、コストパフォーマンスを強調するプロモーションを行う。\n- **サポートの強化**: 高橋美咲のコメントを参考に、顧客サポートの質をさらに向上させ、安心感を提供することで顧客の信頼を得る。\
+    \ \n\nこの要約を基に、営業活動を展開し、顧客のニーズに応じたアプローチを行うことが重要です。"
+  generated_at: '2025-10-18T21:36:52.179129'
   task_type: 顧客要約
