--- a/config/prompt.yaml
+++ b/config/prompt.yaml
@@ -46,3 +46,60 @@ CustomerSummarizePrompt:
   eval_items:
     - "要約の正確性 (1-10点): 顧客データの内容を正確に要約できているか"
     - "営業有用性 (1-10点): 営業担当者にとって実用的な情報が含まれているか"
+  
+ # 機微情報判断プロンプトクラス
+SensitiveInformationJudgePrompt:
+  # 生成プロンプト
+  dummy_data_create_prompt: |
+   ■背景
+   LLMが機微情報を含むか含まないかを判断する仕組みを作成・検証したいです。
+
+   ■指示
+   以下のサンプルを参照し、機微情報を含む活動内容を30件、含まない活動内容を70件で合計100件作成してください。
+   機微情報を含む活動内容の順番はランダムに出現させてください。
+   
+   ■出力形式
+   接触履歴番号、活動内容の列を持つCSV形式でお願いします。
+   出力結果の文字列をそのままCSVに保存するため、前後に余計な文章や文字列は含まないでください。
+
+   ■機微情報の定義
+   人種
+   信条（思想、信仰等）
+   社会的身分
+   病歴
+   犯罪の経歴
+   犯罪により害を被った事実
+
+   ■サンプル
+    {sample_data}
+
+  # 生成プロンプト
+  generate_prompt: |
+   ■背景
+   LLMが機微情報を含むか含まないかを判断する仕組みを作成・検証したいです。
+
+   ■指示
+   以下の検証対象を参照し、機微情報を含むか含まないかを判断してください。
+
+   ■出力形式
+   接触履歴番号、活動内容、機微情報判断結果の列を持つCSV形式でお願いします。
+   機微情報判断結果には「該当する」または「該当しない」と記載してください。
+   出力結果の文字列をそのままCSVに保存するため、前後に余計な文章や文字列は含まないでください。
+
+   ■機微情報の定義
+   人種
+   信条（思想、信仰等）
+   社会的身分
+   病歴
+   犯罪の経歴
+   犯罪により害を被った事実
+
+   ■検証対象
+    {check_data}
+
+
+
+  # クラス固有の評価項目
+  eval_items:
+    - "要約の正確性 (1-10点): 顧客データの内容を正確に要約できているか"
+    - "営業有用性 (1-10点): 営業担当者にとって実用的な情報が含まれているか"
