--- a/config/answer.yaml
+++ b/config/answer.yaml
@@ -6,13 +6,12 @@ CustomerSummarizePrompt:
     \  - 年収: 520万円\n  - 満足度: 3.5\n  - コメント: 価格がやや高い\n\n- **C004 高橋美咲**\n  - 年齢: 31歳\n\
     \  - 性別: 女性\n  - 職業: マーケター\n  - 年収: 550万円\n  - 満足度: 4.2\n  - コメント: サポートが丁寧で安心\n\
     \n- **C005 山田健一**\n  - 年齢: 38歳\n  - 性別: 男性\n  - 職業: マネージャー\n  - 年収: 750万円\n  -\
-    \ 満足度: 4.8\n  - コメント: 全体的に満足度が高い\n\n#### 2. 購買傾向\n- **製品カテゴリ**: パソコン、スマートフォン、タブレット、周辺機器（キーボード、マウス、ヘッドホン、プリンターなど）\n\
-    - **人気製品**: パソコンとスマートフォンが特に多く購入されている。\n- **満足度**: 満足度は全体的に高いが、鈴木次郎のように価格に対する不満を持つ顧客もいる。\n\
-    \n#### 3. 重要なポイント\n- **高い満足度**: 特に山田健一（4.8）や田中太郎（4.5）は製品の品質に満足しており、リピート購入の可能性が高い。\n\
-    - **デザイン重視**: 佐藤花子はデザインに満足しており、デザイン性を重視する顧客層へのアプローチが有効。\n- **価格への懸念**: 鈴木次郎のコメントから、価格に敏感な顧客がいることがわかるため、価格戦略の見直しが必要。\n\
-    \n#### 4. 営業戦略の提案\n- **リピート促進**: 満足度の高い顧客に対して、特別割引や新製品の先行案内を行い、リピート購入を促進する。\n\
-    - **デザイン重視のプロモーション**: 佐藤花子のようなデザイナー向けに、デザイン性を強調したマーケティングキャンペーンを展開する。\n- **価格戦略の見直し**:\
-    \ 鈴木次郎の意見を考慮し、価格に対する柔軟な対応（割引やバンドル販売）を検討する。\n- **サポートの強化**: 高橋美咲のコメントを参考に、顧客サポートの質をさらに向上させ、安心感を提供することで顧客満足度を高める。\
-    \ \n\nこの要約を基に、営業活動を展開し、顧客との関係を深めていくことが期待されます。"
-  generated_at: '2025-10-19T11:01:49.349824'
+    \ 満足度: 4.8\n  - コメント: 全体的に満足度が高い\n\n#### 2. 購買傾向\n- **製品カテゴリ**: パソコン、スマートフォン、タブレット、周辺機器（ヘッドホン、イヤホン、キーボード、マウス、プリンター、モニター）\n\
+    - **高満足度の顧客**: 山田健一（4.8）、田中太郎（4.5）、高橋美咲（4.2）\n- **低満足度の顧客**: 鈴木次郎（3.5） - 価格に対する不満が見られる\n\
+    \n#### 3. 重要なポイント\n- 高い満足度を示す顧客は、製品の品質やサポートに対してポジティブなフィードバックを持っている。\n- 鈴木次郎は価格に対する不満があり、価格戦略の見直しが必要。\n\
+    - 若年層（佐藤花子）にはデザイン性が重視されている。\n\n#### 4. 営業戦略の提案\n- **製品の品質とサポートを強調**: 高満足度の顧客の意見を基に、製品の品質やサポートの良さを前面に出した営業活動を行う。\n\
+    - **価格戦略の見直し**: 鈴木次郎のフィードバックを参考に、価格に敏感な顧客向けに割引やキャンペーンを検討する。\n- **デザイン性のアピール**:\
+    \ 若年層向けの製品においては、デザイン性を強調したマーケティングを行い、特にデザイナー向けのプロモーションを強化する。\n- **顧客満足度の向上**:\
+    \ 満足度の低い顧客に対しては、フォローアップを行い、ニーズを把握し改善策を提案することで、リピート購入を促進する。"
+  generated_at: '2025-11-10T11:56:28.907977'
   task_type: 顧客要約
